--- a/static/style.css
+++ b/static/style.css
@@ -8,10 +8,70 @@ body {
   padding: 0;
 }
 
-h1 {
-  margin: 0;
-  padding: 20px;
+#nav {
   border-bottom: 1px black solid;
   box-shadow: 2px 2px 10px;
   background-color: #ededed;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+h1 {
+  margin: 0;
+  padding: 15px;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+#logo {
+  vertical-align: middle;
+  width: 37px;
+  margin: 15px 5px 15px 15px;
+}
+
+#container {
+  width: 470px;
+  height: 358px;
+  border: 10px #333 solid;
+  margin-top: 30px;
+  margin-left: 50px;
+}
+
+#driver {
+  width: 450px;
+  height: 338px;
+}
+
+#videoElement {
+  display: none;
+  width: 450px;
+  height: 338px;
+  background-color: #666;
+}
+canvas {
+  display: none;
+}
+
+button {
+  font-size: 20px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  outline: none;
+  text-decoration: none;
+  border: none;
+  margin: 20px;
+}
+
+#btnv {
+  margin-left: 110px;
+  color: white;
+  background-color: #e86a6c;
+}
+#btni {
+  color: white;
+  background-color: #ed902d;
+}
+#btnp {
+  color: white;
+  background-color: #98e27f;
 }
