--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@ body {
 
 h1 {
   margin: 0;
+  margin-left: 500px;
   padding: 15px;
   vertical-align: middle;
   display: inline-block;
@@ -30,11 +31,24 @@ h1 {
 }
 
 #container {
+  display: inline-block;
   width: 470px;
   height: 358px;
   border: 10px #333 solid;
   margin-top: 30px;
   margin-left: 50px;
+}
+
+#result {
+  position: absolute;
+  top: 120px;
+  left: 650px;
+  border: 5px dashed black;
+  width: 500px;
+  height: 500px;
+  margin-left: 30px;
+  text-align: center;
+  font-size: 50px;
 }
 
 #driver {
@@ -74,4 +88,14 @@ button {
 #btnp {
   color: white;
   background-color: #98e27f;
+}
+
+#or {
+  font-size: 15px;
+  margin-left: 260px;
+  font-weight: bold;
+}
+
+#file {
+  margin-left: 170px;
 }
